Add sources selector

--- a/index.html
+++ b/index.html
@@ -97,14 +97,16 @@
                 </div>
                 <div class="modal-body">
                     Base(s) de connaissance:
-                    <div>
-                        <input type="checkbox" id="service_public" name="service_public" checked />
-                        <label for="service_public"><b>service-public.fr</b> - renseignements administratifs</label>
-                    </div>
-                
-                    <div>
-                        <input type="checkbox" id="legifrance" name="legifrance" checked/>
-                        <label for="legifrance"><b>legifrance.gouv.fr</b> - textes législatifs</label>
+                    <div id="sources">
+                        <div>
+                            <input type="checkbox" name="ServicePublic" checked />
+                            <label for="service_public"><b>service-public.fr</b> - renseignements administratifs</label>
+                        </div>
+                    
+                        <div>
+                            <input type="checkbox" name="Legifrance" checked/>
+                            <label for="legifrance"><b>legifrance.gouv.fr</b> - textes législatifs</label>
+                        </div>
                     </div>
                 </div>
             </div>
